--- a/style.less
+++ b/style.less
@@ -1,3 +1,8 @@
+body {
+    font-family: 'Coda', sans-serif;
+
+}
+
 .glossy-button {
     box-sizing: border-box;
     //border-top: 3px solid rgba(255,255,255,0.5);
@@ -30,8 +35,9 @@
 }
 
 #board {
-    width: 640px;
+    width: 480px;
     padding: 20px;
+    border-radius: 20px;
     margin: auto;
     background: url('resources/bg.png') repeat;
     overflow: hidden;
@@ -48,7 +54,13 @@
         .glossy-button();
 
         &.pulse {
-            box-shadow: 0 0 15px white;
+            box-shadow: 0 0 15px;
+        }
+
+        &.hide {
+            transform: scale(0, 0);
+            -moz-transform: scale(0, 0);
+            -webkit-transform: scale(0, 0);
         }
     }
 
@@ -57,11 +69,27 @@
     }
 }
 
-#mixins {
-    * {
+#turn-counter {
+    display: inline-block;
+    overflow: hidden;
+    padding: 4px 20px 5px;
+    .glossy-button();
+
+    #turns {
+        font-size: 72px;
         float: left;
     }
 
+    .label {
+        float: left;
+        font-size: 24px;
+        padding: 14px 0 0 10px;
+        line-height: 20px;
+        text-align: left;
+    }
+}
+
+#mixins {
     *:first-child {
         border-radius: 15px 0 0 15px;
     }
@@ -69,18 +97,21 @@
     *:last-child {
         border-radius: 0 15px 15px 0;
     }
+    padding: 20px;
+    text-align: center;
 }
 
 .mixin {
-    display: block;
+    display: inline-block;
+    vertical-align: top;
+    .glossy-button();
     width: 100px;
     height: 100px;
-    padding: 3px 24px;
-    font-size: 80px;
+    padding: 12px 24px;
+    font-size: 60px;
     font-weight: bold;
-    color: white;
-    text-shadow: 0 0px 1px rgba(0,0,0,.75);
-    .glossy-button();
+    color: rgba(0,0,0,.5);
+    //text-shadow: 0 0px 1px rgba(0,0,0,.75);
     .transform(scale(1,1));
     
     &:hover {
@@ -91,7 +122,7 @@
     &:active {
         //.transform(scale(1.2,1.2));
         box-shadow: 0 15px 25px rgba(255,255,255,0) inset, 0 5px 5px rgba(0,0,0,.25) inset;
-        padding: 10px 24px;
+        padding: 18px 24px 14px;
     }
 
 }
